# email-newsletter

./: .gitignore  Cargo.toml
.github/workflows/: general.yml
migrations/: 20230519030749_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
