[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Rodrigues"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}